--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dasmoto's Arts and Crafts</title>
+    <title>Dasmoto's Arts And Crafts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="resources/styles/main.css" />
 </head>
 <body>
 
@@ -18,7 +17,7 @@
     <!--  BRUSHES DIV -->
     <div id="brushes">
         <h2>Brushes</h2>
-        <img src="images/hacksaw.jpeg" alt="hacksaw brand paint brushes">
+        <img src="resources/images/hacksaw.jpeg" alt="hacksaw brand paint brushes">
         <h3>Hacksaw Brushes</h3>
         <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and their ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00/brush.</span></p>
     </div>
@@ -26,7 +25,7 @@
     <!-- FRAMES DIV -->
     <div id="frames">
         <h2>Frames</h2>
-        <img src="images/frames.jpeg" alt="random picture frames">
+        <img src="resources/images/frames.jpeg" alt="random picture frames">
         <h3>Art Frames (assorted)</h3>
         <p>Assorted frames made of different material, including MDF, birchwood and PDE. Select frames can be sanded and painted according to your needs. <span class="price">Starting at $2.00/frame.</span></p>
     </div>
@@ -34,7 +33,7 @@
     <!-- PAINT DIV -->
     <div id="paint">
         <h2>Paint</h2>
-        <img src="images/finnish.jpeg" alt="paint containers">
+        <img src="resources/images/finnish.jpeg" alt="paint containers">
         <h3>Clean Finnish Paint</h3>
         <p>Imported paint from Finland. Over 256 colors available in store, varying in quantity (1oz. to 8 oz.). Clean Finnish paint microbinds to canvas increasing the finish and longevity of any artwork. <span class="price">Starting at $5.00/tube.</span></p>
     </div>
